@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-11T12:17:06Z",
+  "timestamp" : "2024-09-12T00:44:21Z",
   "count_outdated" : 4445,
   "uniques_outdated" : 2195,
-  "count" : 4467,
-  "uniques" : 2217,
+  "count" : 4470,
+  "uniques" : 2220,
   "clones" : [
     {
       "timestamp": "2024-08-29T00:00:00Z",
@@ -79,12 +79,12 @@
     },
     {
       "timestamp": "2024-09-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 4,
+      "uniques_minmax": [ 1, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
