@@ -1,6 +1,6 @@
 {
-  "count": 22,
-  "uniques": 19,
+  "count": 25,
+  "uniques": 22,
   "clones": [
     {
       "timestamp": "2024-08-29T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2024-09-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 4,
+      "uniques": 4
     }
   ]
 }
